# SupTube

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  package-lock.json  package.json
.github/: FUNDING.yml
src/: index.html  main.js  script.js  splashscreen.html  style.css
src-tauri/: Cargo.toml  adguard.js  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: adguard.js
src/assets/SponsorBlock/mnjggcdmjocbbbhaepdhchncahnbgone/5.2.0_0/: manifest.json
src/assets/SponsorBlock/mnjggcdmjocbbbhaepdhchncahnbgone/5.2.0_0/_locales/ar/: messages.json
src/assets/SponsorBlock/mnjggcdmjocbbbhaepdhchncahnbgone/5.2.0_0/_locales/bg/: messages.json
src/assets/SponsorBlock/mnjggcdmjocbbbhaepdhchncahnbgone/5.2.0_0/_locales/bn/: messages.json
src/assets/SponsorBlock/mnjggcdmjocbbbhaepdhchncahnbgone/5.2.0_0/_locales/ca/: messages.json
src/assets/SponsorBlock/mnjggcdmjocbbbhaepdhchncahnbgone/5.2.0_0/_locales/cs/: messages.json
src/assets/SponsorBlock/mnjggcdmjocbbbhaepdhchncahnbgone/5.2.0_0/_locales/da/: messages.json
src/assets/SponsorBlock/mnjggcdmjocbbbhaepdhchncahnbgone/5.2.0_0/_locales/de/: messages.json
src/assets/SponsorBlock/mnjggcdmjocbbbhaepdhchncahnbgone/5.2.0_0/_locales/el/: messages.json
src/assets/SponsorBlock/mnjggcdmjocbbbhaepdhchncahnbgone/5.2.0_0/_metadata/: computed_hashes.json  verified_contents.json
src/assets/SponsorBlock/mnjggcdmjocbbbhaepdhchncahnbgone/5.2.0_0/js/: background.js  content.js  document.js  help.js  options.js  permissions.js  popup.js  upsell.js  vendor.js
(+35 files in other folders)
