[package]
name = "suptube"
version = "1.4.2"
description = "An opensource client for YouTube"
authors = ["Sandun Wiratunga"]
license = "MIT"
repository = "https://github.com/sandunwira/SupTube"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
tauri-bundler = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["shell-open", "updater", "window-set-fullscreen", "window-set-resizable"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
